--- a/src/main/resources/static/Templates/linkSessionId.html
+++ b/src/main/resources/static/Templates/linkSessionId.html
@@ -69,8 +69,8 @@
                                        ng-change="selectedAdmittanceTeacher($index)"
                                        name="admittanceTeacher"
                                        class="pt-1"
-                                       theme="select2" title="Выберите преподавателя">
-                                <ui-select-match placeholder="Выберите преп...">
+                                       theme="select2" title="Назначить преподавателя всей группе">
+                                <ui-select-match placeholder="Всей группе назначить преп...">
                                     {{$select.selected.surname + ' ' + $select.selected.initials}}
                                 </ui-select-match>
                                 <ui-select-choices repeat="teacher in teachers | propsFilter: {surname: $select.search, name: $select.search} | orderBy:'surname'">
@@ -91,8 +91,8 @@
                                        ng-change="selectedExamTeacher($index)"
                                        name="examTeacher"
                                        class="pt-1"
-                                       theme="select2" title="Выберите преподавателя">
-                                <ui-select-match placeholder="Выберите преп...">
+                                       theme="select2" title="Назначить преподавателя всей группе">
+                                <ui-select-match placeholder="Всей группе назначить преп...">
                                     {{$select.selected.surname + ' ' + $select.selected.initials}}
                                 </ui-select-match>
                                 <ui-select-choices repeat="teacher in teachers | propsFilter: {surname: $select.search, name: $select.search} | orderBy:'surname'">
@@ -113,8 +113,8 @@
                                        ng-change="selectedKrOrKpTeacher($index)"
                                        name="krOrKpTeacher"
                                        class="pt-1"
-                                       theme="select2" title="Выберите преподавателя">
-                                <ui-select-match placeholder="Выберите преп...">
+                                       theme="select2" title="Назначить преподавателя всей группе">
+                                <ui-select-match placeholder="Всей группе назначить преп...">
                                     {{$select.selected.surname + ' ' + $select.selected.initials}}
                                 </ui-select-match>
                                 <ui-select-choices repeat="teacher in teachers | propsFilter: {surname: $select.search, name: $select.search} | orderBy:'surname'">
