--- a/src/main/resources/static/Templates/linkAttestationId.html
+++ b/src/main/resources/static/Templates/linkAttestationId.html
@@ -24,7 +24,7 @@
 
         <div class="ng-hide my-3" ng-show="syllabusContentList.length">
             <form class="simple-form" name="syllabusContentList">
-                <table class="table table-hover table-striped table-responsive-xl table-container">
+                <table class="table table-hover table-striped table-responsive-xl">
                     <thead>
                     <tr>
                         <th class="text-center"></th>
