--- a/src/main/resources/static/Templates/linkAttestationId.html
+++ b/src/main/resources/static/Templates/linkAttestationId.html
@@ -24,10 +24,10 @@
 
         <div class="ng-hide my-3" ng-show="syllabusContentList.length">
             <form class="simple-form" name="syllabusContentList">
-                <table class="table table-hover table-striped table-responsive-xl">
+                <table class="table table-hover table-striped table-container-link-attestation">
                     <thead>
                     <tr>
-                        <th class="text-center"></th>
+<!--                        <th class="text-center"></th>-->
                         <th class="text-center">Название дисциплины</th>
                         <th class="text-center">Аттестация</th>
 <!--                        <th class="text-center">Допуск</th>-->
@@ -39,7 +39,7 @@
                     <tbody data-ng-repeat="syllabusContent in syllabusContentList track by $index" ng-init="$parentIndex=$index"  data-ng-switch on="showStudents[$index]">
                     <!-- Содержание учебного плана -->
                     <tr class="bg-white bg-aqua-gradient">
-                        <td class="text-center border-info"></td>
+<!--                        <td class="text-center border-info"></td>-->
                         <td class="text-center border-info">
                             <button class="btn btn-link" data-ng-click="toggleShowStudents($index)">
                                 {{syllabusContent.discipline.name}}
@@ -51,9 +51,9 @@
                                        ng-disabled="!teachers"
                                        ng-change="selectedAttestationTeacher($index)"
                                        name="attestationTeacher"
-                                       class="col-md-10 pt-1"
+                                       class="pt-1"
                                        theme="select2" title="Назначить преподавателя всей группе">
-                                <ui-select-match placeholder="Назначить преподавателя всей группе...">
+                                <ui-select-match placeholder="Всей группе назначить преподавателя...">
                                     {{$select.selected.surname + ' ' + $select.selected.name + ' ' + $select.selected.patronymic}}
                                 </ui-select-match>
                                 <ui-select-choices repeat="teacher in teachers | propsFilter: {surname: $select.search, name: $select.search} | orderBy:'surname'">
@@ -145,7 +145,7 @@
                     </tr>
                     <!-- Студенты -->
                     <tr data-ng-switch-when="true" ng-repeat="connectTeacherStudentDTO in syllabusContent.connectTeacherStudentDTOList | orderBy:'studentFullName' track by $index">
-                        <td class="text-center border-info"></td>
+<!--                        <td class="text-center border-info"></td>-->
                         <td class="text-center border-info">
                             {{connectTeacherStudentDTO.studentFullName}}
                         </td>
