changed lib select2

--- a/src/main/resources/static/Templates/linkSession.html
+++ b/src/main/resources/static/Templates/linkSession.html
@@ -30,7 +30,7 @@
         </div>
 
         <div class="ng-hide my-3" ng-show="groups.length">
-            <table class="table table-hover table-striped table-sm table-responsive-lg">
+            <table class="table table-hover table-striped table-sm">
                 <thead>
                 <tr>
                     <th class="text-center"></th>
