--- a/src/main/resources/static/Libs/angularjs/select.css
+++ b/src/main/resources/static/Libs/angularjs/select.css
@@ -57,14 +57,14 @@ body > .select2-container.open {
 .ui-select-container[theme="select2"].direction-up .ui-select-match,
 .ui-select-container.select2.direction-up .ui-select-match {
     border-radius: 4px; /* FIXME hardcoded value :-/ */
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    /*border-top-left-radius: 0;*/
+    /*border-top-right-radius: 0;*/
 }
 .ui-select-container[theme="select2"].direction-up .ui-select-dropdown,
 .ui-select-container.select2.direction-up .ui-select-dropdown {
     border-radius: 4px; /* FIXME hardcoded value :-/ */
-    border-bottom-left-radius: 0;
-    border-bottom-right-radius: 0;
+    /*border-bottom-left-radius: 0;*/
+    /*border-bottom-right-radius: 0;*/
 
     border-top-width: 1px;  /* FIXME hardcoded value :-/ */
     border-top-style: solid;
