--- a/src/main/resources/static/Libs/select2-3.4.5/select2.css
+++ b/src/main/resources/static/Libs/select2-3.4.5/select2.css
@@ -208,6 +208,11 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
     width: 100%;
     min-height: 26px;
     margin: 0;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    background: #fff;
+    border: 1px solid #5897fb;
+
     padding-left: 4px;
     padding-right: 4px;
 
@@ -302,8 +307,11 @@ Version: 3.4.5 Timestamp: Mon Nov  4 08:22:42 PST 2013
 /* results */
 .select2-results {
     max-height: 200px;
-    padding: 0 0 0 4px;
-    margin: 4px 4px 4px 0;
+    /*padding: 0 0 0 4px;*/
+    padding: 0;
+    /*margin: 4px 4px 4px 0;*/
+    background: #fff;
+    border: 1px solid #5897fb;
     position: relative;
     overflow-x: hidden;
     overflow-y: auto;
