--- a/src/main/resources/static/Templates/linkAttestation.html
+++ b/src/main/resources/static/Templates/linkAttestation.html
@@ -50,7 +50,7 @@
         </div>
 
         <div class="ng-hide my-3" ng-show="groups.length">
-            <table class="table table-hover table-striped table-sm table-responsive-xs">
+            <table class="table table-hover table-striped table-sm">
                 <thead>
                 <tr>
                     <th class="text-center"></th>
